# rust-lab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/black-hole/: Cargo.toml
crates/black-hole/src/: main.rs
crates/bouncing-ball/: Cargo.toml
crates/bouncing-ball/src/: main.rs
crates/flutter-bird/: Cargo.toml
crates/flutter-bird/src/: main.rs
crates/focus-clock/: Cargo.toml
crates/focus-clock/src/: main.rs
crates/launch-tracker/: Cargo.toml
crates/launch-tracker/src/: api.rs  app.rs  globe.rs  main.rs  ui.rs
crates/matrix-rain/: Cargo.toml
crates/matrix-rain/src/: main.rs
docs/: ai-assisted-development.md  engineering-principles.md  harness-engineering-principles.md
libs/terminal-toy-kit/: Cargo.toml
libs/terminal-toy-kit/src/: lib.rs
poc-data-import/: package-lock.json  package.json
poc-data-import/.openai/: hosting.json
poc-data-import/app/: globals.css  layout.tsx  page.tsx
poc-data-import/tests/: rendered-html.test.mjs
web/gargantua/: README.md  index.html
